--- a/assets/css/Global.style.css
+++ b/assets/css/Global.style.css
@@ -130,6 +130,10 @@
     --focus-shadow: 0px 0px 8px rgb(194, 204, 230, 0.62);
     --input-select: #9db2e8;
     --input-svg: #6a7d95;
+
+    /*** Yes and No/cancel/delete Colours ***/    
+    --homenet-yes: #4be1ab;
+    --homenet-no: #fa6060;
 }
 
 
