--- a/assets/css/Global.style.css
+++ b/assets/css/Global.style.css
@@ -132,6 +132,7 @@
     --focus-shadow: 0px 0px 8px rgb(194, 204, 230, 0.62);
     --input-select: #9db2e8;
     --input-svg: #6a7d95;
+    --switch-handle-shad: -1px 2px 5.5px -1px rgb(28, 33, 34, 50%);
 
     /*** Yes and No/cancel/delete Colours ***/    
     --homenet-yes: #4be1ab;
@@ -303,4 +304,13 @@ Font Second
     100% {
         opacity: 1;
     }
+}
+
+/* No Ant on click Animation */
+.no-ant-wave {
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important;
 }
